--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <center><img src="images/30.jpg" alt="30"></center>
 <p></p>
 <center><img src="images/31.jpg" alt="31"></center>
-<a href="https://noeljyothis.github.io/chapter1/" target="_blank">
+<a href="https://noeljyothis.github.io/TheEmergencyBrake_3/" target="_blank">
 <button>Click here!</button>
 </body>
 </html>
