--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Prologue</title>
+<title>The Emergency Brake</title>
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="style.css">
 
